@@ -1,5 +1,6 @@
 01/06/2009
 - fixed typo in smarty_internal_resource_registered
+- bugfix for custom delimiter at extends resource and {extends} tag
 
 01/05/2009
 - bugfix sha1() calculations at extends resource and some general improvments on sha1() handling 
